--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quanly_sv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tranbien99.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
