--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quanly_sv",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tranbien99.github.io/task1",
+  "homepage": "https://task1-qlsv.herokuapp.com/task1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
